Closed
Bug 1650113
Opened 5 years ago
Closed 5 years ago
error: ‘class gfxPlatformGtk’ has no member named ‘UseDMABufTextures’
Categories
(Developer Infrastructure :: Source Code Analysis, defect)
Developer Infrastructure
Source Code Analysis
Tracking
(firefox-esr68 unaffected, firefox-esr78 unaffected, firefox77 unaffected, firefox78 unaffected, firefox79 unaffected, firefox80 fixed)
RESOLVED
FIXED
mozilla80
Tracking | Status | |
---|---|---|
firefox-esr68 | --- | unaffected |
firefox-esr78 | --- | unaffected |
firefox77 | --- | unaffected |
firefox78 | --- | unaffected |
firefox79 | --- | unaffected |
firefox80 | --- | fixed |
People
(Reporter: Sylvestre, Assigned: stransky)
References
(Regression)
Details
(Keywords: regression)
Attachments
(1 file)
trunk fails to build with gcc-9 and 10 with:
In file included from Unified_cpp_gfx_layers5.cpp:110:
/root/firefox-gcc-last/gfx/layers/client/ContentClient.cpp: In static member function ‘static already_AddRefed<mozilla::layers::ContentClient> mozilla::layers::ContentClient::CreateContentClient(mozilla::layers::CompositableForwarder*)’:
/root/firefox-gcc-last/gfx/layers/client/ContentClient.cpp:89:40: error: ‘class gfxPlatformGtk’ has no member named ‘UseDMABufTextures’
89 | if (gfxPlatformGtk::GetPlatform()->UseDMABufTextures()) {
| ^~~~~~~~~~~~~~~~~
dom/media/platforms/ffmpeg/libav54
gmake[4]: *** [/root/firefox-gcc-last/config/rules.mk:748: Unified_cpp_gfx_layers5.o] Error 1
Comment 1•5 years ago
|
||
Also fails with ~/.mozbuild/clang/bin/clang-9
(by the way, shouldn't that be clang-10
now?)
1:36.64 dom/media/platforms/ffmpeg/libav55
1:58.43 In file included from Unified_cpp_gfx_layers5.cpp:110:
1:58.43 /workspace/gecko-dev/gfx/layers/client/ContentClient.cpp:89:40: error: no member named 'UseDMABufTextures' in 'gfxPlatformGtk'
1:58.43 if (gfxPlatformGtk::GetPlatform()->UseDMABufTextures()) {
1:58.43 ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ ^
2:07.53 BUILDSTATUS BUILD_VERBOSE dom/media/platforms/ffmpeg/ffmpeg57
2:08.24 dom/media/platforms/ffmpeg/ffmpeg58
2:16.74 1 error generated.
2:17.54 make[4]: *** [/workspace/gecko-dev/config/rules.mk:748: Unified_cpp_gfx_layers5.o] Error 1
2:17.54 make[3]: *** [/workspace/gecko-dev/config/recurse.mk:72: gfx/layers/target-objects] Error 2
2:17.63 make[3]: *** Waiting for unfinished jobs....
Probaby a duplicate of https://bugzilla.mozilla.org/show_bug.cgi?id=1649895
Reporter | ||
Comment 2•5 years ago
|
||
Salut Jan
I guess it is the gtk version.
Martin, does it ring a bell?
Flags: needinfo?(stransky)
Reporter | ||
Comment 3•5 years ago
|
||
checking for gtk+-wayland-3.0 >= 3.10 xkbcommon >= 0.4.1 libdrm >= 2.4... no
[...]
checking for gtk+-3.0 >= 3.4.0 gtk+-unix-print-3.0 glib-2.0 gobject-2.0 gio-unix-2.0 ... yes
checking MOZ_GTK3_CFLAGS... -pthread -I/usr/include/gtk-3.0/unix-print -I/usr/include/gtk-3.0 -I/usr/include/at-spi2-atk/2.0 -I/usr/include/at-spi-2.0 -I/usr/include/dbus-1.0 -I/usr/lib/x86_64-linux-gnu/dbus-1.0/include -I/usr/include/gtk-3.0 -I/usr/include/cairo -I/usr/include/pango-1.0 -I/usr/include/fribidi -I/usr/include/harfbuzz -I/usr/include/atk-1.0 -I/usr/include/cairo -I/usr/include/pixman-1 -I/usr/include/uuid -I/usr/include/freetype2 -I/usr/include/libpng16 -I/usr/include/gdk-pixbuf-2.0 -I/usr/include/gio-unix-2.0 -I/usr/include/libmount -I/usr/include/blkid -I/usr/include/glib-2.0 -I/usr/lib/x86_64-linux-gnu/glib-2.0/include
checking MOZ_GTK3_LIBS... -lgtk-3 -lgdk-3 -lpangocairo-1.0 -lpango-1.0 -lharfbuzz -latk-1.0 -lcairo-gobject -lcairo -lgdk_pixbuf-2.0 -lgio-2.0 -lgobject-2.0 -lglib-2.0
checking for gtk+-2.0 >= 2.18.0 gtk+-unix-print-2.0 glib-2.0 >= 2.22 gobject-2.0 gio-unix-2.0 gdk-x11-2.0... yes
checking MOZ_GTK2_CFLAGS... -pthread -I/usr/include/gtk-2.0 -I/usr/include/gtk-unix-print-2.0 -I/usr/include/gtk-2.0 -I/usr/include/atk-1.0 -I/usr/include/gio-unix-2.0 -I/usr/include/gtk-2.0 -I/usr/lib/x86_64-linux-gnu/gtk-2.0/include -I/usr/include/pango-1.0 -I/usr/include/fribidi -I/usr/include/harfbuzz -I/usr/include/cairo -I/usr/include/pixman-1 -I/usr/include/uuid -I/usr/include/freetype2 -I/usr/include/libpng16 -I/usr/include/gdk-pixbuf-2.0 -I/usr/include/libmount -I/usr/include/blkid -I/usr/include/glib-2.0 -I/usr/lib/x86_64-linux-gnu/glib-2.0/include
checking MOZ_GTK2_LIBS... -lgtk-x11-2.0 -latk-1.0 -lpangoft2-1.0 -lfontconfig -lfreetype -lgio-2.0 -lgdk-x11-2.0 -lpangocairo-1.0 -lpango-1.0 -lharfbuzz -lcairo -lgdk_pixbuf-2.0 -lgobject-2.0 -lglib-2.0
on a debian stable
Assignee | ||
Comment 4•5 years ago
|
||
I see. It turns off Walyland support, which also means you don't get dmabuf/va-api on X11.
Flags: needinfo?(stransky)
Assignee | ||
Comment 5•5 years ago
|
||
Updated•5 years ago
|
Assignee: nobody → stransky
Status: NEW → ASSIGNED
Pushed by ccoroiu@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/4f044c37af6f
[Linux] Use DMABufTextures only when Wayland support is build, r=sotaro
Updated•5 years ago
|
status-firefox77:
--- → unaffected
status-firefox78:
--- → unaffected
status-firefox79:
--- → unaffected
status-firefox80:
--- → affected
status-firefox-esr68:
--- → unaffected
status-firefox-esr78:
--- → unaffected
Keywords: regression
Regressed by: 1649120
Updated•5 years ago
|
Has Regression Range: --- → yes
Comment 9•5 years ago
|
||
bugherder |
Status: ASSIGNED → RESOLVED
Closed: 5 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla80
Updated•3 years ago
|
Product: Firefox Build System → Developer Infrastructure
You need to log in
before you can comment on or make changes to this bug.
Description
•