Bug 1650113 [Linux] Use DMABufTextures only when Wayland support is build, r=sotaro

Differential Revision: https://phabricator.services.mozilla.com/D82177